--- a/sass/partials/variables/_colors.scss
+++ b/sass/partials/variables/_colors.scss
@@ -6,6 +6,12 @@ $date_posted: #828282;
 
 $booking_card: #4980C1;
 
+$alert_red: #BE0707;
+
+$notif_green: #81b7ae;
+
+$req_orange: #FDAE46;
+
 ::placeholder {
     color: #BDBDBD;
 }
