--- a/sass/partials/_posts-pages.scss
+++ b/sass/partials/_posts-pages.scss
@@ -34,7 +34,7 @@
   display: inline-block;
   vertical-align: top;
   width: 20rem;
-  height: 7.5rem;
+  height: 7.75rem;
   padding: 1rem;
   margin: 0 0 0.25rem 0.5rem;
   border-radius: 0.5rem;
@@ -62,8 +62,8 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 13rem auto;
-  grid-gap: 0.5rem;
+  grid-template-columns: 13.25rem auto;
+  grid-gap: 0.25rem;
 }
 
 .alertCard_content_wrapper {
@@ -94,7 +94,7 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .alertCard_date_wrapper p {
@@ -140,7 +140,7 @@
   display: inline-block;
   vertical-align: top;
   width: 20rem;
-  height: 10.5rem;
+  height: 10.75rem;
   padding: 1rem;
   margin: 0 0 0.25rem 0.5rem;
   border-radius: 0.5rem;
@@ -170,8 +170,8 @@
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: 13rem auto;
-  grid-gap: 0.5rem;
+  grid-template-columns: 13.5rem auto;
+  grid-gap: 0.25rem;
 }
 
 .notifCard_content_wrapper {
@@ -235,7 +235,7 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .notifCard_date_wrapper p {
@@ -290,6 +290,7 @@
 }
 
 .newRequestCard_details {
+  height: 71px;
   display: block;
 }
 
@@ -316,18 +317,19 @@
 .newRequestCard_status {
   margin: 0;
   grid-column: 1 / -1;
+  align-self: flex-end;
 }
 
 .newRequestCard_date_wrapper {
-  height: 100%;
+  height: 93px;
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .newBookingCard_date_for {
-  transform: translateY(-46px);
+  transform: translate(-15px,-48px);
   text-align: center;
   height: 0;
 }
@@ -343,41 +345,17 @@
       Alert Detail view style starts here
 ******************************************************************************/
 
-/* Text-level Semantics
-   ========================================================================= */
-
-#alertDetailHeader h1 {
-  font-size: 1.5rem;
-  font-weight: 500;
-  color: #4f4f4f;
-  padding: 0;
-  margin: 1rem 0;
-}
-
-#alertDetailHeader .headerTitle {
-  margin: 0;
-}
-
 .alertDetailCardTitle {
-  font-size: 1rem;
-  font-weight: 600;
   margin: 0 0 0.33rem 0;
-  padding: 0;
-  color: white;
-  text-transform: uppercase;
+  display: flex;
+  align-self: center;
 }
 
 .alertDetailPostedDate {
-  font-size: 0.875rem;
-  font-weight: 300;
-  margin: 0 0 0.33rem 0;
-  color: rgba(255, 255, 255, 0.5);
+  margin: 0;
 }
 
 .alertDetailDescription {
-  font-size: 0.875rem;
-  font-weight: 300;
-  line-height: 1.5;
   margin: 0;
   color: rgba(255, 255, 255, 0.8);
 }
@@ -386,16 +364,14 @@
   background-color: #f4f4f4;
   width: 100%;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.06);
-  position: fixed;
+  position: sticky;
   top: 0;
-  padding: 2rem 1rem 1rem 1rem;
 }
 
 .topHeader {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0.25rem 0;
 }
 
 button {
@@ -426,10 +402,6 @@ svg {
   grid-row: 1/1;
 }
 
-.detailCardSection {
-  margin: 7.5rem 1rem 0 1rem;
-}
-
 .alertDetailCard {
   background-color: #4f4f4f;
   width: 100%;
@@ -437,6 +409,55 @@ svg {
   border-radius: 0.5rem;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
   margin: 0.5rem 0;
+}
+
+.alertDetail_wrapper {
+  margin: 1rem 0;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 1rem;
+}
+
+.alertHeader {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-gap: 0.25rem;
+}
+
+.body_wrapper_alert,
+.body_wrapper_book {
+  min-height: 100vh;
+  background-color: #f4f4f4;
+}
+
+.alertDetailDescription {
+  margin: 0;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.alertDetailPostedDate {
+  margin: 0;
+}
+
+.alertStatusBar {
+  width: 8px;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.detailCard {
+  background-color: white;
+  width: 100%;
+  margin-bottom: 0.5rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+  margin-right: 0.5rem;
+}
+
+.alertDetailSub {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .hidden {
@@ -449,56 +470,85 @@ svg {
 
 /******************************************************************************
         Alert Detail view style ends here
-  ******************************************************************************/
+******************************************************************************/
 
 /******************************************************************************
         Notification Detail view style starts here
-  ******************************************************************************/
+******************************************************************************/
+
+.notificationHeader {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  grid-gap: 0.25rem;
+}
 
 .notifDetailCardTitle {
-  font-size: 1rem;
-  font-weight: 400;
-  padding: 0;
   margin: 0 0 0.33rem 0;
-  color: #4f4f4f;
-  text-transform: uppercase;
+  display: flex;
+  align-self: center;
 }
 
 .notifDetailPostedDate {
-  font-size: 0.875rem;
-  font-weight: 300;
   margin: 0 0 0.33rem 0;
 }
 
-.notifDetailDuration {
-  font-size: 0.875rem;
-  font-weight: 300;
-  margin: 0 0 0.33rem 0;
-  color: rgba(0, 0, 0, 0.5);
+.notificationDetail {
+  margin: 1rem 0;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 1rem;
+}
+
+.notificationDuration {
+  margin: 1.5rem 0 1rem 0;
+  display: grid;
+  grid-gap: 0.5rem;
+}
+
+.tag {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #eeeeee;
+  padding: 0.25rem 0.5rem;
+  width: fit-content;
+  border-radius: 40px;
+  margin: 0;
 }
 
 .notifDetaildescription {
-  font-size: 0.875rem;
-  font-weight: 300;
-  line-height: 1.5;
   margin: 0;
   color: rgba(0, 0, 0, 0.8);
+}
+
+.notificationStatusBar {
+  width: 8px;
+  height: 100%;
+  border-radius: 10px;
 }
 
 #notifDetailHeader {
   background-color: #f4f4f4;
   width: 100%;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.06);
-  position: fixed;
+  position: sticky;
   top: 0;
-  padding: 2rem 1rem 1rem 1rem;
 }
 
 #notifDetailHeader .topHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0.25rem 0;
+  margin: 0;
+}
+
+.body_wrapper_notif {
+  min-height: 100vh;
+  background-color: #f4f4f4;
+}
+
+.notificationDate,
+.notificationTime {
+  margin: 0;
+  padding: 0 0 0 0.25rem;
+  color: #4f4f4f;
 }
 
 .notifDetailCard {
@@ -510,8 +560,146 @@ svg {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
 }
 
+.notificationDetailSub {
+  display: flex;
+  justify-content: flex-end;
+}
+
 /******************************************************************************
         Notification Detail view style ends here
+******************************************************************************/
+
+/******************************************************************************
+        Request Detail view style starts here
+******************************************************************************/
+
+.body_wrapper_req {
+  min-height: 100vh;
+  background-color: #f4f4f4;
+}
+
+.detailCardSection {
+  margin: 1rem;
+}
+
+.edit_btn {
+  background-color: rgba(0, 0, 0, 0);
+  color: #4f4f4f;
+}
+
+.newRequestDate {
+  margin: 0;
+  color: #4f4f4f;
+}
+
+.newRequestStatus {
+  margin: 0;
+  color: #4f4f4f;
+}
+
+.description {
+  margin: 0 0 2rem 0;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.attachmentTitle {
+  margin: 0;
+  padding: 0 0 0 0.25rem;
+  color: #4f4f4f;
+}
+
+.requestDetail {
+  margin: 1rem 0;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 1rem;
+}
+
+.requestStatusBar {
+  width: 8px;
+  height: 100%;
+  background-color: rgba(253, 174, 70, 0.5);
+  border-radius: 10px;
+
+  div {
+    border-radius: 10px;
+  }
+}
+
+.bookingStatusBar {
+  width: 0.5rem;
+  height: 100%;
+  background-color: #4980C1;
+  border-radius: 10px;
+}
+
+.RequestDetailCard {
+  background-color: white;
+  width: 100%;
+  margin-bottom: 0.5rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+  margin-right: 0.5rem;
+}
+
+.attachmentSection {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
+  gap: 0.25rem;
+}
+
+.attachment {
+  margin-top: 0.25rem;
+}
+
+.tag {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #eeeeee;
+  padding: 0.25rem 0.5rem;
+  width: fit-content;
+  border-radius: 40px;
+  margin: 0;
+}
+
+.requestDetailSub {
+  display: flex;
+  justify-content: space-between;
+}
+
+.tipsInfoSection,
+.tipsInfoSectionBooking {
+  margin: auto;
+  margin: 0 1rem;
+  padding-top: 1.5rem;
+  text-align: center;
+  p {
+    margin: 0;
+  }
+
+  p:first-of-type {
+    margin: 1rem 0 0 0;
+  }
+}
+
+.illustration {
+  width: fit-content;
+  margin: auto;
+}
+
+.main_btn {
+  background-color: rgba(0, 0, 0, 0);
+  right: 0;
+  bottom: 3.75rem;
+  position: fixed;
+}
+
+
+/******************************************************************************
+        Request Detail view style ends here
 ******************************************************************************/
 
 /******************************************************************************
@@ -592,7 +780,8 @@ svg {
   }
 }
 
-.options_subject, .options_desciption {
+.options_subject,
+.options_desciption {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -635,6 +824,182 @@ svg {
   }
 }
 
+.requestInfoMain .bookingDate {
+  margin: 0;
+}
+
 /******************************************************************************
         New Request view style ends here
+******************************************************************************/
+
+/******************************************************************************
+        Chat view style starts here
+******************************************************************************/
+
+#chatHeader {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  background-color: #f4f4f4;
+}
+
+.chat_input {
+  flex-grow: 1;
+
+  input {
+    padding: 0.75rem 1rem;
+    border-radius: 2rem;
+    width: 100%;
+    border: 1px solid #4f4f4f;
+  }
+}
+/* copied */
+.mdl-card__supporting-text {
+  width: auto;
+  height: 100%;
+  padding-top: 0;
+  padding-bottom: 0;
+}
+#messages {
+  overflow-y: auto;
+  padding: 0 0.5rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+#message-filler {
+  flex-grow: 1;
+}
+.message-container:first-of-type {
+  border-top-width: 0;
+}
+.message-container {
+  display: block;
+  margin-top: 1rem;
+  padding: 0.75rem 1rem;
+  opacity: 0;
+  width: max-content;
+  max-width: 70%;
+  transition: opacity 0.25s ease-in-out;
+}
+
+.chat_bubble_round_manager {
+  border-radius: 0.5rem 0.5rem 0.5rem 0;
+}
+
+.chat_bubble_round_user {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+  border-radius: 0.5rem 0.5rem 0 0.5rem;
+}
+
+.message-container.visible {
+  opacity: 1;
+}
+.message-container .pic {
+  background-image: url("/images/profile_placeholder.png");
+  background-repeat: no-repeat;
+  width: 30px;
+  height: 30px;
+  background-size: 30px;
+  border-radius: 20px;
+}
+.message-container .spacing {
+  display: table-cell;
+  vertical-align: top;
+}
+.message-container .message {
+  padding: 0;
+  line-height: 1.15;
+}
+.message-container .name {
+  display: inline-block;
+  width: 100%;
+  color: #81b7ae;
+  box-sizing: border-box;
+}
+#message-form {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+  display: flex;
+  flex-flow: row nowrap;
+  padding: 0.5rem 1rem;
+
+  button {
+    flex-grow: 1;
+    background-color: $notif_green;
+    border-radius: 2rem;
+    margin-left: 0.25rem;
+
+    &:disabled {
+      background-color: #f4f4f4;
+    }
+  }
+}
+#image-form {
+  display: flex;
+  flex-direction: row;
+  width: 48px;
+  float: right;
+}
+
+#user-container {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  top: 22px;
+  width: 100%;
+  right: 0;
+  padding-left: 10px;
+  justify-content: flex-end;
+  padding-right: 10px;
+}
+#user-container #user-pic {
+  top: -3px;
+  position: relative;
+  display: inline-block;
+  background-image: url("/images/profile_placeholder.png");
+  background-repeat: no-repeat;
+  width: 40px;
+  height: 40px;
+  background-size: 40px;
+  border-radius: 20px;
+}
+#user-container #user-name {
+  line-height: 36px;
+  padding-right: 10px;
+  padding-left: 20px;
+}
+#image-form #submitImage {
+  width: auto;
+  padding: 0 6px 0 1px;
+  min-width: 0;
+}
+#image-form #submitImage .material-icons {
+  top: -1px;
+}
+.message img {
+  max-width: 300px;
+  max-height: 200px;
+}
+#mediaCapture {
+  display: none;
+}
+
+.mdl-textfield__label:after {
+  background-color: #0288d1;
+}
+.mdl-textfield--floating-label.is-focused .mdl-textfield__label {
+  color: #0288d1;
+}
+.mdl-button .material-icons {
+  top: -1px;
+  margin-right: 5px;
+}
+/* copied delete useless */
+/******************************************************************************
+        Chat view style ends here
 ******************************************************************************/
