Calendar hifi done. Only illustration for empty day is left

--- a/style.css
+++ b/style.css
@@ -1961,6 +1961,11 @@ svg {
   padding: 0.5rem 1rem 5rem 1rem;
 }
 
+#allCards .notifCard {
+  width: 100%;
+  margin: 0.5rem 0 0 0;
+}
+
 /******************************************************************************
         Calendar style ends here
 ******************************************************************************/
