--- a/sass/partials/variables/_colors.scss
+++ b/sass/partials/variables/_colors.scss
@@ -1,5 +1,7 @@
 $color_body_bg: #eef;
 
+$color_body: #4f4f4f;
+
 $color_h2: #828282;
 
 $date_posted: #828282;
@@ -11,6 +13,17 @@ $alert_red: #BE0707;
 $notif_green: #81b7ae;
 
 $req_orange: #FDAE46;
+
+$color_btn_sign_in_text: #333333;
+$color_btn_sign_in_bg: #DCEBE9;
+
+$color_my_slides_dot: #E0E0E0;
+
+$color_welcome_text: #333333;
+
+$color_login_bg:#F4F4F4; 
+
+$color_input_border: #bdbdbd;
 
 ::placeholder {
     color: #BDBDBD;
