--- a/sass/partials/_elements.scss
+++ b/sass/partials/_elements.scss
@@ -6,10 +6,11 @@
   button {
     width: 100%;
     padding: 0.5rem 0;
-    color: white;
+    color: $color_btn_sign_in_text;
     border-radius: 1.5rem;
-    background-color: black;
+    background-color: $color_btn_sign_in_bg;
     margin-top: 2rem;
+    box-shadow: (3px 3px 4px rgba(0, 0, 0, 0.16));
   }
 }
 
