--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ Table of Contents
 }
 
 @font-face {
+  font-family: futuraBold;
+  src: url(../../../assets/fonts/futura_bold_bt.ttf);
+}
+@font-face {
   font-family: futuraMedium;
   src: url(../../../assets/fonts/futura_medium_bt.ttf);
 }
@@ -37,12 +41,14 @@ Table of Contents
   font-family: SFProDisplayRegular;
   src: url(../../../assets/fonts/SFProDisplayRegular.ttf);
 }
-
+@font-face {
+  font-family: SFProDisplayLight;
+  src: url(../../../assets/fonts/SFProDisplayLight.ttf);
+}
 @font-face {
   font-family: RobotoMono;
   src: url(../../../assets/fonts/RobotoMono-Regular.ttf);
 }
-
 /* 2. Reset ================================================================ */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -396,6 +402,14 @@ h2 {
   font-weight: normal;
 }
 
+#welcome {
+  font-family: futuraBold, serif;
+  font-size: 2.25rem;
+  font-weight: 600;
+  letter-spacing: 2px;
+  color: #333333;
+}
+
 h3 {
   font-family: SFProDisplaySemibold, serif;
   font-weight: 600;
@@ -497,22 +511,58 @@ p {
 }
 .slideshow-container .mySlides p {
   text-align: center;
+  margin: 0.5rem 2rem 2rem 2rem;
+  color: #4f4f4f;
+}
+.slideshow-container button {
+  font-family: SFProDisplaySemibold, serif;
+  letter-spacing: 1px;
 }
 
-.message-container .name {
+.tenexform button {
+  font-family: SFProDisplaySemibold, serif;
+  letter-spacing: 1px;
+}
+.tenexform label input {
+  font-family: SFProDisplayLight, serif;
+  letter-spacing: 1px;
+  color: SFProDisplayRegular, serif;
+}
+.tenexform label input::-moz-placeholder {
+  font-family: SFProDisplayLight, serif;
+  letter-spacing: 1px;
+}
+.tenexform label input:-ms-input-placeholder {
+  font-family: SFProDisplayLight, serif;
+  letter-spacing: 1px;
+}
+.tenexform label input::placeholder {
+  font-family: SFProDisplayLight, serif;
+  letter-spacing: 1px;
+}
+.tenexform p:nth-of-type(1) {
+  font-weight: 400;
+  font-size: 0.8rem;
+  color: #4f4f4f;
+}
+.tenexform p:nth-of-type(2) {
+  color: #4f4f4f;
+  font-family: SFProDisplayLight, serif;
+}
+.tenexform p:nth-of-type(3) {
+  color: #4f4f4f;
+}
+.tenexform .message-container .name {
   font-family: SFProDisplaySemibold, serif;
   font-size: 14px;
 }
-
-.message-container .message {
+.tenexform .message-container .message {
   font-family: SFProDisplayRegular, serif;
 }
-
-#user-container #user-name {
+.tenexform #user-container #user-name {
   font-size: 16px;
 }
-
-.bottomHeader button {
+.tenexform .bottomHeader button {
   font-family: SFProDisplayRegular, serif;
 }
 
@@ -533,6 +583,10 @@ a {
 .slideshow-container {
   max-width: 1000px;
   position: relative;
+  margin: auto;
+}
+
+.slideshow-container img {
   margin: auto;
 }
 
@@ -596,8 +650,8 @@ a {
   cursor: pointer;
   height: 15px;
   width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
+  margin: 0 4px;
+  background-color: #E0E0E0;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -605,7 +659,7 @@ a {
 
 .dot:hover,
 .dot:active {
-  background-color: #717171;
+  background-color: #81B7AE;
 }
 
 /* Fading animation */
@@ -694,7 +748,6 @@ a {
         Alert card home screen starts here
 ******************************************************************************/
 .notification_home_header, .tenexbox_header, .calendar_header {
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   padding: 1rem 0 0.875rem;
@@ -703,8 +756,6 @@ a {
   background-color: #f4f4f4;
   box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.06);
 }
-
-
 .notification_home_header > h2, .tenexbox_header > h2, .calendar_header > h2 {
   margin: 0 0 0 1rem;
 }
@@ -1019,9 +1070,7 @@ a {
 }
 
 .newBookingCard_date_for {
-  -webkit-transform: translate(-18px, -52px);
-          transform: translate(-18px, -52px);
-  transform: translate(-15px, -48px);
+  transform: translate(-18px, -52px);
   text-align: center;
   height: 0;
 }
@@ -1661,15 +1710,12 @@ svg {
 .tenexbox_header {
   z-index: 100;
 }
-
 .tenexbox_header .topHeader {
   padding: 0 1rem;
 }
-
 .tenexbox_header .topHeader h2 {
   margin: 0;
 }
-
 .tenexbox_header .bottomHeader {
   padding: 0 1rem;
 }
@@ -1689,15 +1735,12 @@ svg {
 .calendar_header {
   z-index: 100;
 }
-
 .calendar_header .topHeader {
   padding: 0 1rem;
 }
-
 .calendar_header .topHeader h2 {
   margin: 0;
 }
-
 .calendar_header .bottomHeader {
   padding: 0 1rem;
 }
@@ -1727,36 +1770,42 @@ img {
   text-align: center;
   width: 100%;
   min-height: 100vh;
+  background-color: #F4F4F4;
 }
 .tenexform #signInBtn {
   margin-top: 3rem;
 }
 .tenexform h2 {
-  margin-top: 5rem;
+  margin: 0;
+  padding-top: 6.25rem;
 }
 .tenexform form {
   display: flex;
   flex-flow: column nowrap;
   gap: 1rem;
   align-items: center;
-  margin-top: 5rem;
+  margin-top: 4rem;
   width: 100%;
 }
 .tenexform #loginForm input {
   border-radius: 1.5rem;
-  padding: 0.5rem 1rem;
-  width: 100%;
+  border: 1px solid #bdbdbd;
+  padding: 0.625rem 1.25rem;
+  margin: 0.25rem;
+  width: 343px;
+  box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.16);
 }
 .tenexform p:nth-of-type(1) {
-  text-align: center;
-  font-weight: 400;
-  font-size: 0.8rem;
+  text-align: right;
+  margin: 0.5rem 1rem 1rem 1rem;
 }
 .tenexform p:nth-of-type(2) {
-  margin-top: 2rem;
+  margin-top: 2.5rem;
+  margin-bottom: 0.25rem;
 }
 .tenexform p:nth-of-type(3) {
   text-decoration: underline;
+  margin-top: 0;
 }
 
 /* 8. Comments ============================================================= */
@@ -1785,10 +1834,11 @@ img {
 .btn_to_login button {
   width: 100%;
   padding: 0.5rem 0;
-  color: white;
+  color: #333333;
   border-radius: 1.5rem;
-  background-color: black;
+  background-color: #DCEBE9;
   margin-top: 2rem;
+  box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.16);
 }
 
 /* New request button styling */
