--- a/sass/partials/_elements.scss
+++ b/sass/partials/_elements.scss
@@ -17,8 +17,8 @@
 /* New request button styling */
 #newRequest_btn {
   position: fixed;
-  bottom: 3.5rem;
-  right: 0;
+  bottom: 3.75rem;
+  right: 6px;
 }
 
 /* New request booking popup styling */
