--- a/sass/partials/variables/_colors.scss
+++ b/sass/partials/variables/_colors.scss
@@ -25,6 +25,10 @@ $color_login_bg:#F4F4F4;
 
 $color_input_border: #bdbdbd;
 
+$color_nav_icon: rgb(132, 132, 132);
+$color_nav_icon_active: #81B7AE;
+$color_nav_bg: white;
+
 ::placeholder {
     color: #BDBDBD;
 }
