--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -132,7 +132,7 @@ a {
   right: 0;
   width: 100%;
   height: 3.5rem;
-  background-color: #454545;
+  background-color: $color_nav_bg;
   z-index: 100;
 }
 
@@ -148,6 +148,7 @@ a {
   padding: 0;
   margin: 0;
 }
+
 .app-nav .nav ul li {
   list-style-type: none;
 }
@@ -157,14 +158,18 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: $font_body;
   font-size: 0.6rem;
-  color: #848484;
+  color: $color_nav_icon;
   background: none;
   border: 0;
+  list-style-type: none;
+  letter-spacing: 0.5px;
 }
 
 .app-nav .nav ul li button:active {
   outline: 0;
+  color: $color_nav_icon_active;
 }
 
 .app-nav .nav ul li button svg {
