TenexBox HiFi Filter

--- a/sass/partials/_elements.scss
+++ b/sass/partials/_elements.scss
@@ -231,6 +231,14 @@ canvas,
   color: white;
 }
 
+.activeFilterTextRequest {
+  color: #FDAE46;
+}
+
+.activeFilterTextBooking {
+  color: #4980C1;
+}
+
 .activeFilterBackground {
   background-color: #AAAAAA;
 }
